--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20Nashville%20Housing.sql">Data Cleaning In SQL<br />
+									<h2><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20Nashville%20Housing.sql">Profile<br />
 									</a></h2>
-									<p>Through meticulous data cleaning techniques<br />
-									Carefully clean and modify the Nashville housing data, ensuring its accuracy, reliability, and a clean and structured format<br />
-									This transformation enables comprehensive analysis, uncovering valuable insights for informed decision-making.</p>
+									<p>Passionate and results-driven data analyst with expertise in SQL, Excel, Tableau, and R Programming.<br />
+									Proficient in data manipulation, analysis, and visualization, with a keen eye for detail and a strong analytical mindset. Skilled in transforming complex datasets into actionable insights to drive informed decision-making and facilitate business growth.<br />
+									Committed to leveraging SQL proficiency and analytical skills to uncover valuable opportunities through data analysis.</p>
 								</header>
-								<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20Nashville%20Housing.sql" class="image main"><img src="images/Nashville Housing.webp" alt="" /></a>
+								<a href="https://www.linkedin.com/in/rajesh-triadi11/" class="image main"><img src="Website Home Image.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20Nashville%20Housing.sql" class="button large">View Project</a></li>
+									<li><a href="https://www.linkedin.com/in/rajesh-triadi11/" class="button large">Read More</a></li>
 								</ul>
 							</article>
 
@@ -93,7 +93,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/GlobalCOVID-19VaccinationTracker_16861510706300/Dashboard1" class="image fit"><img src="images/Vaccine Tracker Vizualization.png" alt="" /></a>
-									<p>he Global COVID-19 Vaccination Tracker, provides a comprehensive view of the worldwide vaccination progress against COVID-19. The project focuses on key aspects, including the total number of people vaccinated and not vaccinated, the vaccination rate in relation to GDP, and a comparison of partial and full vaccination rates across different locations.</p>
+									<p>The Global COVID-19 Vaccination Tracker, provides a comprehensive view of the worldwide vaccination progress against COVID-19. The project focuses on key aspects, including the total number of people vaccinated and not vaccinated, the vaccination rate in relation to GDP, and a comparison of partial and full vaccination rates across different locations.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/GlobalCOVID-19VaccinationTracker_16861510706300/Dashboard1" class="button">View Project</a></li>
 									</ul>
