--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Rajesh T.N<br />
 						Portofolio</h1>
-						<p>Data Analyst with Expertise in SQL, Tableau, and PowerBI </a></p>
+						<p>Data Analyst with Expertise in SQL, Tableau, and R Programming </a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -98,10 +98,12 @@
 										<li><a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/GlobalCOVID-19VaccinationTracker_16861510706300/Dashboard1" class="button">View Project</a></li>
 									</ul>
 								</article>
+
+							<!-- Tesla Projects -->
+							<section id="tesla-projects" class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Tesla_Supercharger_Network/Data%20Cleaning%20-%20TeslaSupercharger.sql">Tesla Supercharger - Data Cleaning in SQL<br />
-										</a></h2>
+										<h2><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20TeslaSupercharger.sql">Tesla Supercharger - Data Cleaning in SQL<br /></a></h2>
 									</header>
 									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20TeslaSupercharger.sql" class="image fit"><img src="images/Tesla.webp" alt="" /></a>
 									<p>In this project, the data cleaning process was an essential step to ensure the quality and reliability of the Tesla Supercharger dataset. The data cleaning involved several tasks, including handling missing values, removing duplicates, standardizing data formats, and correcting inconsistencies.</p>
