--- a/index.html
+++ b/index.html
@@ -99,40 +99,19 @@
 									</ul>
 								</article>
 
-							<!-- Tesla Projects -->
-							<section id="tesla-projects" class="posts">
+								<!-- Tesla Projects -->
 								<article>
 									<header>
-										<h2><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20TeslaSupercharger.sql">Tesla Supercharger - Data Cleaning in SQL<br /></a></h2>
+									  <h2>Tesla Supercharger Network - Data Cleaning, Analysis, and Visualization</h2>
 									</header>
-									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20TeslaSupercharger.sql" class="image fit"><img src="images/Tesla.webp" alt="" /></a>
-									<p>In this project, the data cleaning process was an essential step to ensure the quality and reliability of the Tesla Supercharger dataset. The data cleaning involved several tasks, including handling missing values, removing duplicates, standardizing data formats, and correcting inconsistencies.</p>
+									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Tesla_Supercharger_Network" class="image fit"><img src="images/Tesla.webp" alt="" /></a>
+									<p>These projects focus on the Tesla Supercharger network dataset and involve SQL for data cleaning and analysis, followed by visualization using Tableau.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Data%20Cleaning%20-%20TeslaSupercharger.sql" class="button">View Project</a></li>
+									  <li><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Tesla_Supercharger_Network" class="button">View Code</a></li>
+									  <li><a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/TeslaSuperchargerNetworks/Dashboard2" class="button">View Visualization</a></li>
 									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Tesla_Supercharger_Network/Exploratory%20Data%20Analysis%20-%20TeslaSupercharger.sql">Tesla Supercharger - Exploratory Data Analysis(EDA) in SQL<br />
-										</a></h2>
-									</header>
-									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Exploratory%20Data%20Analysis%20-%20TeslaSupercharger.sql" class="image fit"><img src="images/Tesla.webp" alt="" /></a>
-									<p>In this project, exploratory data analysis (EDA) was conducted on the Tesla Supercharger dataset to gain insights and understand the characteristics of Supercharger locations. EDA is a crucial step that involves examining and summarizing the data to identify patterns, relationships, and trends.</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Exploratory%20Data%20Analysis%20-%20TeslaSupercharger.sql" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/TeslaSuperchargerNetworks/Dashboard2">Tesla Supercharger - Data Visualization With Tableau<br />
-										</a></h2>
-									</header>
-									<a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/TeslaSuperchargerNetworks/Dashboard2" class="image fit"><img src="images/Tesla.webp" alt="" /></a>
-									<p>In this project, I have utilized Tableau to create dynamic and interactive visualizations that showcase the Tesla Supercharger data. The visualizations include bar charts, maps, and line graphs, each providing unique insights into the distribution, trends, and growth of the supercharger network.</p>
-									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/TeslaSuperchargerNetworks/Dashboard2" class="button">View Project</a></li>
-									</ul>
-								</article>
+								  </article>
+								  
 							</section>
 
 				
