--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
 								<article>
 									<header>
 									  <h2>Tesla Supercharger Network - Data Cleaning, Analysis, and Visualization</h2>
+									  <p class="small-text">Tools: SQL, Tableau</p>
 									</header>
 									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Tesla_Supercharger_Network" class="image fit"><img src="images/Tesla.webp" alt="" /></a>
-									<p>These projects focus on the Tesla Supercharger network dataset and involve SQL for data cleaning and analysis, followed by visualization using Tableau.</p>
+									<p>Tesla Supercharger Network Analysis project aims to provide valuable insights into the Tesla Supercharger Network dataset. The analysis focuses on four key aspects: total superchargers, total stall units, supercharger distribution, and supercharger growth over time.</p>
+				  
 									<ul class="actions special">
 									  <li><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Tesla_Supercharger_Network" class="button">View Code</a></li>
 									  <li><a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/TeslaSuperchargerNetworks/Dashboard2" class="button">View Visualization</a></li>
