--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
 									  <li><a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/TeslaSuperchargerNetworks/Dashboard2" class="button">Visualization</a></li>
 									</ul>
 								  </article>
+
+								<!-- Los Angeles Crime Projects -->
+								<article>
+									<header>
+									  <h2>Los Angeles Crime Analysis - Data Cleaning, Analysis, and Visualization</h2>
+									  <p class="small-text">Tools: SQL, Tableau</p>
+									</header>
+									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Los_Angeles_Crime_2020_to_2023" class="image fit"><img src="images/LA Crime.jpg" alt="" /></a>
+									<p>Examining crime trends, patterns, and demographics, the project aims to identify key insights that can be used by law enforcement agencies and policymakers to make informed decisions and implement effective crime prevention strategies.</p>
+				  
+									<ul class="actions special">
+									  <li><a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/blob/main/Los_Angeles_Crime_2020_to_2023/Data%20Cleaning%20-%20Los%20Angeles%20Crime%20Dataset.sql" class="button">Code</a></li>
+									  <li><a href="https://public.tableau.com/app/profile/rajesh.triadi.noftarizal/viz/LosAngelesCrime2020-2023/Dashboard1?publish=yes" class="button">Visualization</a></li>
+									</ul>
+								  </article>
 								  
 							</section>
 
