--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 								<!-- Tesla Projects -->
 								<article>
 									<header>
-									  <h2>Tesla Supercharger Network - Data Cleaning, Analysis, and Visualization</h2>
+									  <h2>Tesla Supercharger Network</h2>
+									  <p class="small-text">Objective: Data Cleaning, Analysis, and Visualization</p>
 									  <p class="small-text">Tools: SQL, Tableau</p>
 									</header>
 									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Tesla_Supercharger_Network" class="image fit"><img src="images/Tesla.webp" alt="" /></a>
@@ -113,7 +114,8 @@
 								<!-- Los Angeles Crime Projects -->
 								<article>
 									<header>
-									  <h2>Los Angeles Crime Analysis - Data Cleaning, Analysis, and Visualization</h2>
+									  <h2>Los Angeles Crime Analysis</h2>
+									  <p class="small-text">Objective: Data Cleaning, Analysis, and Visualization</p>
 									  <p class="small-text">Tools: SQL, Tableau</p>
 									</header>
 									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Los_Angeles_Crime_2020_to_2023" class="image fit"><img src="images/LA Crime.jpg" alt="" /></a>
