--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 								<article>
 									<header>
 									  <h2>Tesla Supercharger Network</h2>
-									  <p class="small-text">Objective: Data Cleaning, Analysis, and Visualization</p>
-									  <p class="small-text">Tools: SQL, Tableau</p>
+									  <p class="small-text"><strong>Objectives:</strong> Data Cleaning, Analysis, and Visualization</p>
+									  <p class="small-text"><strong>Tools:</strong> SQL, Tableau</p>
 									</header>
 									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Tesla_Supercharger_Network" class="image fit"><img src="images/Tesla.webp" alt="" /></a>
 									<p>Tesla Supercharger Network Analysis project aims to provide valuable insights into the Tesla Supercharger Network dataset. The analysis focuses on four key aspects: total superchargers, total stall units, supercharger distribution, and supercharger growth over time.</p>
@@ -115,8 +115,8 @@
 								<article>
 									<header>
 									  <h2>Los Angeles Crime Analysis</h2>
-									  <p class="small-text">Objective: Data Cleaning, Analysis, and Visualization</p>
-									  <p class="small-text">Tools: SQL, Tableau</p>
+									  <p class="small-text"><strong>Objectives:</strong> Data Cleaning, Analysis, and Visualization</p>
+									  <p class="small-text"><strong>Tools:</strong> SQL, Tableau</p>
 									</header>
 									<a href="https://github.com/RajeshTriadiNoftarizal/PortofolioProjects/tree/main/Los_Angeles_Crime_2020_to_2023" class="image fit"><img src="images/LA Crime.jpg" alt="" /></a>
 									<p>Examining crime trends, patterns, and demographics, the project aims to identify key insights that can be used by law enforcement agencies and policymakers to make informed decisions and implement effective crime prevention strategies.</p>
